cloudformation_templates/ecs_load_balancer.yml
AWSTemplateFormatVersion: "2010-09-09"
Parameters:
  VPC:
    Type: String
    Default: vpc-07a9f882d7619368c

  Subnet1:
    Type: String
    Default: subnet-04b7b332328962cbc

  Subnet2:
    Type: String
    Default: subnet-068a104b72b5d7713

Resources:
  #Load balancer for ecs service
  ALB:
    Properties:
      Scheme: internet-facing
      SecurityGroups:
        - Ref: ALBSecurityGroup
      Subnets:
        - Ref: Subnet1
        - Ref: Subnet2
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer

  #Load balancer security group
  ALBSecurityGroup:
    Properties:
      GroupDescription: ALB Security Group
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: "80"
          IpProtocol: tcp
          ToPort: "80"
      VpcId:
        Ref: VPC
    Type: AWS::EC2::SecurityGroup

  #Load balancer listener
  ALBListener:
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref ALBTargetGroup
          Type: forward
      LoadBalancerArn: !Ref ALB
      Port: "80"
      Protocol: HTTP
    Type: AWS::ElasticLoadBalancingV2::Listener

  #Load balancer target group
  ALBTargetGroup:
    Properties:
      HealthCheckIntervalSeconds: "30"
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: "10"
      HealthyThresholdCount: "4"
      Matcher:
        HttpCode: "200"
      Port: 80
      Protocol: HTTP
      TargetType: ip
      UnhealthyThresholdCount: "3"
      VpcId:
        Ref: VPC
    Type: AWS::ElasticLoadBalancingV2::TargetGroup

  #FargateSecurityGroup
  FargateSecurityGroup:
    Properties:
      GroupDescription: Task Security Group
      SecurityGroupIngress:
        - FromPort: "80"
          IpProtocol: tcp
          SourceSecurityGroupId:
            Fn::GetAtt:
              - ALBSecurityGroup
              - GroupId
          ToPort: "80"
        - CidrIp: 0.0.0.0/0
          FromPort: '8081'
          IpProtocol: tcp
          ToPort: '8081'
      VpcId:
        Ref: VPC
    Type: AWS::EC2::SecurityGroup

Outputs:
  ALBURL:
    Description: URL of the ALB
    Value:
      Fn::Join:
        - ""
        - - http://
          - Fn::GetAtt:
              - ALB
              - DNSName
  ALBTargetGroup:
    Value: !Ref ALBTargetGroup
  FargateSecurityGroup:
    Value: !Ref FargateSecurityGroup
